--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,9 @@ DATABASE_URL=sqlite:////data/jobs.db
 STORAGE_PATH=/data
 ALLOWED_ORIGINS=http://localhost:3000,http://localhost
 
+# CORS Configuration
+SOCKETIO_CORS_ORIGINS=http://localhost:3000,http://localhost
+
 # Gunicorn
 GUNICORN_WORKERS=4
 GUNICORN_TIMEOUT=600
