--- a/app/frontend/.env.example
+++ b/app/frontend/.env.example
@@ -30,6 +30,13 @@ NEXT_PUBLIC_MAX_FILES=10
 NEXT_PUBLIC_UPLOAD_TIMEOUT_MS=300000
 
 # -----------------------------------------------------------------------------
+# Frontend URLs (Optional)
+# -----------------------------------------------------------------------------
+# Canonical URL for SEO and metadata
+# Default: http://localhost:3000
+NEXT_PUBLIC_CANONICAL_URL=http://localhost:3000
+
+# -----------------------------------------------------------------------------
 # Environment
 # -----------------------------------------------------------------------------
 NODE_ENV=development
