Fix CI: format backend with Black, update frontend ESLint config for Next.js 16 and ESLint 9
- Formatted all backend Python files with Black
- Changed frontend lint script from 'next lint' to 'eslint .' (Next.js 16 removed built-in lint command)
- Created eslint.config.mjs for ESLint 9 flat config format
- Removed canonical URL environment variable (NEXT_PUBLIC_CANONICAL_URL)
- Reverted hardcoded ETA to dynamic calculation

--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -6,7 +6,7 @@
     "build": "next build --webpack",
     "dev": "next dev --webpack",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint .",
     "format": "prettier --write .",
     "type-check": "tsc --noEmit",
     "test": "vitest"
