--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -81,7 +81,9 @@ COPY app/backend/app /opt/backend
 ENV PIP_DEFAULT_TIMEOUT=1000
 RUN pip3 install --break-system-packages --upgrade pip && \
     pip3 install --break-system-packages --no-cache-dir -r /opt/backend/requirements.txt && \
-    pip3 install --break-system-packages --no-cache-dir -r /opt/backend/kcc/requirements.txt
+    if [ -f /opt/backend/kcc/requirements.txt ]; then \
+        pip3 install --break-system-packages --no-cache-dir -r /opt/backend/kcc/requirements.txt; \
+    fi
 
 # Copy frontend build output (Next.js standalone)
 WORKDIR /opt/frontend
