--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,182 @@
 services:
-  app:
-    image: nilsleo/kcc-cloud:latest
-    container_name: mangaconverter-foss-app
+  # ============================================
+  # DEVELOPMENT SERVICES
+  # ============================================
+
+  frontend-dev:
+    build:
+      context: ./app/frontend
+      dockerfile: Dockerfile.dev
+      args:
+        NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL:-http://localhost:8060}
+    container_name: mangaconverter-foss-frontend-dev
+    restart: unless-stopped
+    user: "0:0"
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./app/frontend:/app
+    environment:
+      - TZ=${TZ:-UTC}
+      - HOME=/app
+      - XDG_CACHE_HOME=/app/.cache
+      - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL:-http://localhost:8060}
+      - NEXT_PUBLIC_MAX_FILES=${NEXT_PUBLIC_MAX_FILES:-10}
+      - CHOKIDAR_USEPOLLING=true
+      - WATCHPACK_POLLING=true
+      - WATCHPACK_POLLING_INTERVAL=1000
+    depends_on:
+      - backend
+    develop:
+      watch:
+        - action: rebuild
+          path: app/frontend/package.json
+        - action: rebuild
+          path: app/frontend/pnpm-lock.yaml
+    profiles:
+      - dev
+
+  backend:
+    build:
+      context: ./app/backend
+      args:
+        USER_ID: ${PUID:-1000}
+        GROUP_ID: ${PGID:-1000}
+    container_name: mangaconverter-foss-backend
+    restart: unless-stopped
+    ports:
+      - "8060:8060"
+    command: ["gunicorn", "--reload", "-c", "gunicorn_config.py", "wsgi:app"]
+    volumes:
+      - ./app/backend/app:/app
+      - conversion-data:/data
+    user: "${PUID:-1000}:${PGID:-1000}"
+    environment:
+      - TZ=${TZ:-UTC}
+      - DATABASE_URL=sqlite:////data/jobs.db
+      - STORAGE_PATH=/data
+      - ALLOWED_ORIGINS=http://localhost:3000,http://localhost
+      - FLASK_ENV=${FLASK_ENV:-production}
+      - FLASK_DEBUG=${FLASK_DEBUG:-0}
+      - GUNICORN_TIMEOUT=${GUNICORN_TIMEOUT:-600}
+      - GUNICORN_GRACEFUL_TIMEOUT=${GUNICORN_GRACEFUL_TIMEOUT:-600}
+      - CELERY_BROKER_URL=redis://redis:6379/0
+    depends_on:
+      - redis
+    develop:
+      watch:
+        - action: restart
+          path: app/backend/app
+          ignore:
+            - __pycache__/
+            - .pytest_cache/
+            - '*.pyc'
+            - kcc/kindlegen/
+        - action: rebuild
+          path: app/backend/requirements.txt
+        - action: rebuild
+          path: app/backend/app/kcc/requirements.txt
+    profiles:
+      - dev
+
+  celery-worker:
+    build:
+      context: ./app/backend
+      args:
+        USER_ID: ${PUID:-1000}
+        GROUP_ID: ${PGID:-1000}
+    command: [
+      "watchmedo", "auto-restart",
+      "--recursive",
+      "--directory=/app",
+      "--pattern=*.py",
+      "--",
+      "celery", "-A", "celery_config.celery_app", "worker",
+      "--loglevel=info",
+      "-P", "prefork",
+      "-c", "${CELERY_CONCURRENCY:-3}",
+      "-Q", "conversion",
+      "-E"
+    ]
+    restart: unless-stopped
+    volumes:
+      - ./app/backend/app:/app
+      - conversion-data:/data
+    environment:
+      - TZ=${TZ:-UTC}
+      - CELERY_BROKER_URL=redis://redis:6379/0
+      - DATABASE_URL=sqlite:////data/jobs.db
+      - STORAGE_PATH=/data
+    depends_on:
+      - redis
+    develop:
+      watch:
+        - action: restart
+          path: app/backend/app
+          ignore:
+            - __pycache__/
+            - .pytest_cache/
+            - '*.pyc'
+            - kcc/kindlegen/
+        - action: rebuild
+          path: app/backend/requirements.txt
+        - action: rebuild
+          path: app/backend/app/kcc/requirements.txt
+    deploy:
+      resources:
+        limits:
+          cpus: '1.9'
+          memory: 3G
+        reservations:
+          cpus: '1.5'
+          memory: 2500M
+    profiles:
+      - dev
+
+  redis:
+    image: redis:7-alpine
+    container_name: mangaconverter-foss-redis
+    restart: unless-stopped
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis-data:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    profiles:
+      - dev
+
+  # ============================================
+  # PRODUCTION SERVICE (single-container)
+  # ============================================
+
+  app-prod:
+    build:
+      context: .
+      dockerfile: Dockerfile.prod
+      args:
+        USER_ID: ${PUID:-1000}
+        GROUP_ID: ${PGID:-1000}
+        NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL_PROD:-http://localhost:8080}
+        NEXT_PUBLIC_MAX_FILES: ${NEXT_PUBLIC_MAX_FILES:-10}
+    container_name: mangaconverter-foss-prod
     restart: unless-stopped
     ports:
       - "8080:80"
     environment:
-      - USER_ID=501 # determine this by running id <your-username> on your host
-      - GROUP_ID=20 # determine this by running id -g <your-username> on your host
-      - TZ=Europe/Berlin # set your timezone
-      - NEXT_PUBLIC_MAX_FILES=10 # Max files that can be uploaded at once
-      - CELERY_WORKERS=2 # number of celery worker containers - allow you to process multiple conversions simultaneously but also consume more resources with every instance
+      - TZ=${TZ:-UTC}
+      - NEXT_PUBLIC_MAX_FILES=${NEXT_PUBLIC_MAX_FILES:-10}
     volumes:
-      # persist data on the host machine in order to not lose converted files once the container is removed
-      - ./volumes/data:/data # contains DB and converted files
-      - ./volumes/kindlegen:/opt/backend/kindlegen:ro # mount  KindleGen binary; obtain from https://archive.org/details/kindlegen and place it in this folder
+      - ./volumes/data:/data
+      - ./volumes/kindlegen:/opt/backend/kindlegen:ro
+    profiles:
+      - prod
 
+volumes:
+  conversion-data:
+    driver: local
+  redis-data:
+    driver: local
