--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,112 +1,51 @@
-name: Bug Report
-description: Report a bug or unexpected behavior
+name: Bug report
+description: Report a problem or unexpected behavior
 title: "[Bug]: "
-labels: ["bug", "needs-triage"]
+labels: [bug]
 body:
-  - type: markdown
+  - type: checkboxes
+    id: checks
     attributes:
-      value: |
-        Thanks for taking the time to report a bug! Please fill out the information below to help us investigate.
-
+      label: Before submitting
+      options:
+        - label: I searched existing issues to avoid duplicates
+          required: true
   - type: textarea
-    id: description
+    id: summary
     attributes:
-      label: Bug Description
-      description: A clear and concise description of what the bug is.
-      placeholder: Describe the bug...
+      label: Summary
+      description: What happened? Keep it brief and clear.
+      placeholder: Short description of the bug
     validations:
       required: true
-
   - type: textarea
-    id: reproduction
+    id: steps
     attributes:
-      label: Steps to Reproduce
-      description: Steps to reproduce the behavior
+      label: Steps to reproduce
+      description: How can we reproduce the issue?
       placeholder: |
-        1. Go to '...'
-        2. Click on '...'
-        3. Upload file '...'
-        4. See error
+        1. Go to ...
+        2. Click ...
+        3. See error
     validations:
       required: true
-
   - type: textarea
     id: expected
     attributes:
-      label: Expected Behavior
-      description: What you expected to happen
-      placeholder: Describe what should happen...
+      label: Expected behavior
+      placeholder: What did you expect to happen?
     validations:
       required: true
-
-  - type: textarea
-    id: actual
-    attributes:
-      label: Actual Behavior
-      description: What actually happened
-      placeholder: Describe what actually happened...
-    validations:
-      required: true
-
-  - type: dropdown
+  - type: input
     id: environment
     attributes:
-      label: Environment
-      description: How are you running the application?
-      options:
-        - Docker (production single-container)
-        - Docker (development multi-container)
-        - Local development
-        - Other
-    validations:
-      required: true
-
-  - type: input
-    id: version
-    attributes:
-      label: Version/Commit
-      description: What version or commit hash are you running?
-      placeholder: "e.g., v1.0.0, commit 7831b8e, or 'latest'"
-    validations:
-      required: false
-
-  - type: textarea
-    id: docker-config
-    attributes:
-      label: Docker Configuration (if applicable)
-      description: Relevant docker-compose settings or environment variables
-      placeholder: |
-        PUID=1000
-        PGID=1000
-        CELERY_WORKERS=3
-      render: yaml
-    validations:
-      required: false
-
+      label: Environment (optional)
+      description: OS/Browser or runtime info if relevant
+      placeholder: e.g., macOS 14, Chrome 120 / Python 3.11
   - type: textarea
     id: logs
     attributes:
-      label: Logs
-      description: Relevant logs from the application (docker logs, browser console, etc.)
-      placeholder: Paste logs here...
+      label: Relevant logs or screenshots (optional)
+      description: Paste errors or attach images to help diagnose
       render: shell
-    validations:
-      required: false
 
-  - type: textarea
-    id: screenshots
-    attributes:
-      label: Screenshots
-      description: If applicable, add screenshots to help explain your problem
-      placeholder: Drag and drop images here...
-    validations:
-      required: false
-
-  - type: textarea
-    id: additional
-    attributes:
-      label: Additional Context
-      description: Add any other context about the problem here
-      placeholder: Any other relevant information...
-    validations:
-      required: false
