--- a/.env.example
+++ b/.env.example
@@ -33,6 +33,10 @@ CELERY_CONCURRENCY=2
 # Total worker processes = N containers × CELERY_CONCURRENCY processes
 # Example: 5 containers × 2 concurrency = 10 parallel conversion jobs
 
+# Upload Limits (applies to nginx, backend, and frontend)
+# Default: 1GB (1073741824 bytes)
+MAX_UPLOAD_SIZE=1073741824
+
 # Frontend Configuration
 NEXT_PUBLIC_API_URL=http://localhost:8060
 NEXT_PUBLIC_MAX_FILES=10
