--- a/infra/supervisord.conf
+++ b/infra/supervisord.conf
@@ -14,7 +14,7 @@ stderr_logfile_maxbytes=0
 [program:backend]
 directory=/opt/backend
 command=/usr/local/bin/gunicorn -c /opt/backend/gunicorn_config.py -k eventlet -w 1 -b 0.0.0.0:8060 wsgi:app
-environment=PYTHONUNBUFFERED="1",DATABASE_URL="%(ENV_DATABASE_URL)s",STORAGE_PATH="%(ENV_STORAGE_PATH)s",CELERY_BROKER_URL="%(ENV_CELERY_BROKER_URL)s",TZ="%(ENV_TZ)s",ALLOWED_ORIGINS="*"
+environment=PYTHONUNBUFFERED="1",DATABASE_URL="%(ENV_DATABASE_URL)s",STORAGE_PATH="%(ENV_STORAGE_PATH)s",CELERY_BROKER_URL="%(ENV_CELERY_BROKER_URL)s",TZ="%(ENV_TZ)s",ALLOWED_ORIGINS="*",MAX_UPLOAD_SIZE="%(ENV_MAX_UPLOAD_SIZE)s"
 autostart=true
 autorestart=true
 user=appuser
@@ -38,7 +38,7 @@ stderr_logfile_maxbytes=0
 [program:next]
 directory=/opt/frontend
 command=/usr/local/bin/node server.js
-environment=NODE_ENV="production",PORT="3000"
+environment=NODE_ENV="production",PORT="3000",HOSTNAME="0.0.0.0"
 autostart=true
 autorestart=true
 user=appuser
