--- a/app/backend/requirements.txt
+++ b/app/backend/requirements.txt
@@ -21,4 +21,14 @@ speedtest-cli==2.1.3  # Network speed testing for dynamic download speed measure
 PyMuPDF==1.23.8  # PDF page counting (fitz)
 rarfile==4.1  # RAR/CBR archive support
 py7zr==0.20.8  # 7Z/CB7 archive support
+
+pytest==7.4.3
+pytest-cov==4.1.0
+pytest-mock==3.12.0
+pytest-flask==1.3.0
 watchdog==3.0.0  # Filesystem event monitoring for real-time progress
+
+black==23.12.1
+flake8==7.0.0
+mypy==1.8.0
+isort==5.13.2
