--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,6 +59,7 @@ services:
       - GUNICORN_TIMEOUT=${GUNICORN_TIMEOUT:-600}
       - GUNICORN_GRACEFUL_TIMEOUT=${GUNICORN_GRACEFUL_TIMEOUT:-600}
       - CELERY_BROKER_URL=redis://redis:6379/0
+      - MAX_UPLOAD_SIZE=${MAX_UPLOAD_SIZE:-1073741824}
     depends_on:
       - redis
     develop:
@@ -90,7 +91,7 @@ services:
       "celery", "-A", "celery_config.celery_app", "worker",
       "--loglevel=info",
       "-P", "prefork",
-      "-c", "${CELERY_CONCURRENCY:-3}",
+      "-c", "${CELERY_CONCURRENCY:-4}",
       "-Q", "conversion",
       "-E"
     ]
@@ -146,6 +147,7 @@ services:
   # ============================================
 
   app-prod:
+    container_name: kcc-cloud-app-prod
     build:
       context: .
       dockerfile: Dockerfile.prod
@@ -154,7 +156,6 @@ services:
         GROUP_ID: ${PGID:-1000}
         NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL_PROD:-http://localhost:8080}
         NEXT_PUBLIC_MAX_FILES: ${NEXT_PUBLIC_MAX_FILES:-10}
-    container_name: kcc-cloud-prod
     restart: unless-stopped
     ports:
       - "8080:80"
@@ -164,6 +165,8 @@ services:
       - PGID=${PGID:-1000}
       - NEXT_PUBLIC_MAX_FILES=${NEXT_PUBLIC_MAX_FILES:-10}
       - CELERY_WORKERS=${CELERY_WORKERS:-3}
+      - MAX_UPLOAD_SIZE=${MAX_UPLOAD_SIZE:-1073741824}
+      - KCC_PATH=${KCC_PATH:-/opt/backend/kcc/kcc-c2e.py}
     volumes:
       - ./volumes/data:/data
       - ./volumes/kindlegen:/opt/backend/kindlegen:ro
