--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -6,9 +6,21 @@ upstream backend_app {
   server 127.0.0.1:8060;
 }
 
+# Dynamically choose upstream for root location
+# - Route POST requests to backend (uploads, actions)
+# - Route others to Next.js
+map $request_method $root_upstream {
+  default http://next_app;
+  POST    http://backend_app;
+}
+
 server {
   listen 80;
   server_name _;
+
+  # Allow large file uploads for manga/comic conversions
+  # Configured via MAX_UPLOAD_SIZE env var (default 1GB)
+  client_max_body_size ${MAX_UPLOAD_SIZE_MB}M;
 
   # Proxy WebSocket for Socket.IO
   location /socket.io/ {
@@ -31,15 +43,31 @@ server {
     proxy_pass http://backend_app;
   }
 
-  # Everything else -> Next.js app
-  location / {
+  # Fallback named location: if Next.js returns 404, try backend
+  location @backend_fallback {
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
     proxy_http_version 1.1;
     proxy_read_timeout 600s;
-    proxy_pass http://next_app;
+    proxy_pass http://backend_app;
+  }
+
+  # Everything else -> Next.js app
+  location / {
+    # If Next.js returns 404 for a path, try backend before responding
+    error_page 404 = @backend_fallback;
+    proxy_intercept_errors on;
+
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_http_version 1.1;
+    proxy_read_timeout 600s;
+
+    # Dynamically select upstream based on method (POST -> backend)
+    proxy_pass $root_upstream;
   }
 }
-
