--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,8 +22,7 @@ jobs:
       - name: Install dependencies
         run: |
           cd app/backend
-          pip install -r requirements.txt -r requirements-dev.txt
-
+          pip install -r requirements.txt
       - name: Run Black
         run: cd app/backend && black --check . --exclude 'app/kcc'
 
