--- a/infra/supervisord.conf
+++ b/infra/supervisord.conf
@@ -14,7 +14,10 @@ stderr_logfile_maxbytes=0
 [program:backend]
 directory=/opt/backend
 command=/usr/local/bin/gunicorn -c /opt/backend/gunicorn_config.py -k eventlet -w 1 -b 0.0.0.0:8060 wsgi:app
-environment=PYTHONUNBUFFERED="1",DATABASE_URL="%(ENV_DATABASE_URL)s",STORAGE_PATH="%(ENV_STORAGE_PATH)s",CELERY_BROKER_URL="%(ENV_CELERY_BROKER_URL)s",TZ="%(ENV_TZ)s",ALLOWED_ORIGINS="*",MAX_UPLOAD_SIZE="%(ENV_MAX_UPLOAD_SIZE)s"
+; Note: do not reference ENV_MAX_UPLOAD_SIZE here because it may be unset at runtime
+; The Flask app defaults MAX_UPLOAD_SIZE to 1GB if not provided, and nginx upload limit
+; is configured separately via entrypoint using MAX_UPLOAD_SIZE_MB.
+environment=PYTHONUNBUFFERED="1",DATABASE_URL="%(ENV_DATABASE_URL)s",STORAGE_PATH="%(ENV_STORAGE_PATH)s",CELERY_BROKER_URL="%(ENV_CELERY_BROKER_URL)s",TZ="%(ENV_TZ)s",ALLOWED_ORIGINS="*"
 autostart=true
 autorestart=true
 user=appuser
