--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,8 +23,11 @@ jobs:
         run: |
           cd app/backend
           pip install -r requirements.txt
-      - name: Run Black
-        run: cd app/backend && black --check . --exclude 'app/kcc'
+      - name: Install Black (with Jupyter extras)
+        run: pip install "black[jupyter]"
+
+      - name: Run Black (format in-place)
+        run: cd app/backend && black . --exclude 'app/kcc'
 
       - name: Run Flake8
         run: cd app/backend && flake8 . --exclude=app/kcc
