--- a/infra/supervisord.conf
+++ b/infra/supervisord.conf
@@ -29,7 +29,7 @@ stderr_logfile_maxbytes=0
 [program:celery]
 directory=/opt/backend
 command=/usr/local/bin/celery -A celery_config.celery_app worker --loglevel=info -P prefork -c %(ENV_CELERY_WORKERS)s -Q conversion -E
-environment=PYTHONUNBUFFERED="1",DATABASE_URL="%(ENV_DATABASE_URL)s",STORAGE_PATH="%(ENV_STORAGE_PATH)s",CELERY_BROKER_URL="%(ENV_CELERY_BROKER_URL)s",TZ="%(ENV_TZ)s"
+environment=PYTHONUNBUFFERED="1",DATABASE_URL="%(ENV_DATABASE_URL)s",STORAGE_PATH="%(ENV_STORAGE_PATH)s",CELERY_BROKER_URL="%(ENV_CELERY_BROKER_URL)s",TZ="%(ENV_TZ)s",TMPDIR="/data/tmp",TMP="/data/tmp",TEMP="/data/tmp"
 autostart=true
 autorestart=true
 user=appuser
