--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -40,7 +40,8 @@ server {
     proxy_set_header X-Forwarded-Proto $scheme;
     proxy_http_version 1.1;
     proxy_read_timeout 600s;
-    proxy_pass http://backend_app;
+    # Strip the /api prefix before proxying to Flask backend
+    proxy_pass http://backend_app/;
   }
 
   # Fallback named location: if Next.js returns 404, try backend
