--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -10,7 +10,7 @@
 
 # 1) Build frontend
 FROM node:20-slim AS frontend-builder
-ARG NEXT_PUBLIC_API_URL
+ARG NEXT_PUBLIC_API_URL=/api
 ARG NEXT_PUBLIC_MAX_FILES
 ENV NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
 ENV NEXT_PUBLIC_MAX_FILES=${NEXT_PUBLIC_MAX_FILES}
