--- a/app/frontend/.env.example
+++ b/app/frontend/.env.example
@@ -9,6 +9,9 @@
 # - For development: http://localhost:8060
 # - For production: Your deployed backend URL
 NEXT_PUBLIC_API_URL=http://localhost:8060
+# Optional: override WebSocket base URL. Leave empty to use same-origin (recommended behind nginx)
+# When using reverse proxy with /api for HTTP, using same-origin ensures WebSocket connects to /socket.io
+NEXT_PUBLIC_SOCKET_URL=
 # Use mock data in UI (true/false). Default: false
 NEXT_PUBLIC_USE_MOCK_DATA=false
 
