--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -28,8 +28,20 @@ server {
     proxy_set_header Connection "upgrade";
     proxy_set_header Host $host;
     proxy_http_version 1.1;
+    proxy_buffering off;
     proxy_read_timeout 600s;
     proxy_pass http://backend_app;
+  }
+
+  # Compatibility: if a client tries /api/socket.io, still upgrade to backend
+  location /api/socket.io/ {
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
+    proxy_set_header Host $host;
+    proxy_http_version 1.1;
+    proxy_buffering off;
+    proxy_read_timeout 600s;
+    proxy_pass http://backend_app/socket.io/;
   }
 
   # API -> backend
