--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -84,3 +84,24 @@ server {
     proxy_pass $root_upstream;
   }
 }
+  # Ensure the Next.js downloads page is handled by Next, not the Flask API
+  # The backend also exposes GET /downloads for JSON; we want the page here.
+  location = /downloads {
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_http_version 1.1;
+    proxy_read_timeout 600s;
+    proxy_pass http://next_app;
+  }
+
+  location ^~ /downloads/ {
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_http_version 1.1;
+    proxy_read_timeout 600s;
+    proxy_pass http://next_app;
+  }
