--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -159,7 +159,8 @@ services:
         NEXT_PUBLIC_MAX_FILES: ${NEXT_PUBLIC_MAX_FILES:-10}
     restart: unless-stopped
     ports:
-      - "8080:80"
+      - "8080:3000"  # Next.js frontend
+      # - "8060:8060"  # Optional: expose backend directly if not using path-based proxy
     environment:
       - TZ=${TZ:-UTC}
       - PUID=${PUID:-1000}
