--- a/infra/supervisord.conf
+++ b/infra/supervisord.conf
@@ -50,5 +50,4 @@ stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
-[program:nginx]
-; removed: nginx no longer used (Next.js + backend exposed directly)
+; nginx removed (Next.js + backend exposed directly)
