--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -38,10 +38,10 @@ ARG GROUP_ID=1000
 # System packages in two stages: build deps, then runtime deps only
 RUN apt-get update && apt-get install -y --no-install-recommends \
     # Build dependencies (will be removed)
-    build-essential gcc libffi-dev python3-dev libev-dev \
+    build-essential gcc libffi-dev python3-dev libev-dev git \
     # Runtime dependencies (kept)
     python3 python3-pip python3-venv \
-    redis-server supervisor \
+    redis-server supervisor nginx \
     p7zip-full unar poppler-utils unrar-free \
   && rm -rf /var/lib/apt/lists/*
 
@@ -69,8 +69,12 @@ RUN set -ex; \
 
 RUN mkdir -p /data && chown appuser:appuser /data
 
-# Copy backend source
+# Copy backend source (excluding kcc submodule which we'll clone fresh)
 COPY app/backend/app /opt/backend
+
+# Clone KCC (Kindle Comic Converter) - ensures submodule is always available
+RUN rm -rf /opt/backend/kcc && \
+    git clone --depth 1 https://github.com/ciromattia/kcc.git /opt/backend/kcc
 
 # Python deps - install then remove build dependencies
 ENV PIP_DEFAULT_TIMEOUT=1000
@@ -80,7 +84,7 @@ RUN pip3 install --break-system-packages --upgrade pip && \
         pip3 install --break-system-packages --no-cache-dir -r /opt/backend/kcc/requirements.txt; \
     fi && \
     # Remove build dependencies to save ~1-2GB
-    apt-get purge -y --auto-remove build-essential gcc libffi-dev python3-dev libev-dev && \
+    apt-get purge -y --auto-remove build-essential gcc libffi-dev python3-dev libev-dev git && \
     rm -rf /var/lib/apt/lists/*
 
 # Copy frontend build output (Next.js standalone)
@@ -92,6 +96,9 @@ COPY --from=frontend-builder /app/.next/static ./.next/static
 
 # Supervisor config
 COPY infra/supervisord.conf /etc/supervisor/conf.d/app.conf
+
+# Nginx config
+COPY infra/nginx.conf /etc/nginx/nginx.conf
 
 # Entrypoint script
 COPY infra/entrypoint.sh /usr/local/bin/entrypoint.sh
@@ -110,8 +117,8 @@ ENV TZ=UTC \
 # Add kindlegen directory to PATH if mounted
 ENV PATH=$PATH:/usr/local/bin:/opt/backend/kindlegen
 
-# Expose app ports directly (Next.js 3000, backend 8060)
-EXPOSE 3000 8060
+# Expose nginx on port 80 (proxies to Next.js 3000 and backend 8060)
+EXPOSE 80
 
 # Ensure proper permissions
 RUN chown -R appuser:appuser /opt/backend /opt/frontend
