--- a/.env.example
+++ b/.env.example
@@ -10,9 +10,12 @@ FLASK_ENV=production
 FLASK_DEBUG=0
 DATABASE_URL=sqlite:////data/jobs.db
 STORAGE_PATH=/data
+# CORS: Use specific origins for production, or * for development
+# For dev with IP access, use * to allow any origin
 ALLOWED_ORIGINS=http://localhost:3000,http://localhost
 
-# CORS Configuration
+# CORS Configuration for WebSocket
+# For dev with IP access, use * to allow any origin
 SOCKETIO_CORS_ORIGINS=http://localhost:3000,http://localhost
 
 # Gunicorn
@@ -38,6 +41,11 @@ CELERY_CONCURRENCY=2
 MAX_UPLOAD_SIZE=1073741824
 
 # Frontend Configuration
-NEXT_PUBLIC_API_URL=http://localhost:8060
+# Use /api for relative URLs (recommended for both dev and prod)
+NEXT_PUBLIC_API_URL=/api
+# WebSocket URL - only needed for dev when accessing from different machine
+# Set to your server's IP:port (e.g., http://192.168.1.100:8060)
+# Leave empty or omit for localhost access or production
+#NEXT_PUBLIC_WS_URL=http://YOUR_SERVER_IP:8060
 NEXT_PUBLIC_MAX_FILES=10
 NEXT_PUBLIC_MAX_FILE_SIZE=1073741824
